[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyblueprint"
version = "0.0.4"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "draw diagrams using python"
readme = "README.md"
license = "MIT"
keywords=[
    "svg",
    "diagram",
    "python",
    "inkscape",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "svgwrite",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyblueprint"
"Bug Tracker" = "https://github.com/veltzer/pyblueprint/issues"
"Documentation" = "https://veltzer.github.io/pyblueprint"
"Download" = "https://pypi.org/project/pyblueprint/"
"Repository" = "https://github.com/veltzer/pyblueprint"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyblueprint"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyblueprint/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
